--- a/style.css
+++ b/style.css
@@ -3,3 +3,60 @@ body {
   padding: 0;
   margin: 0;
 }
+
+section {
+  padding-top: 128px;
+}
+
+.btn.button {
+  border: 3px solid black;
+  border-radius: 24px;
+}
+
+.btn.button:hover {
+  border: 3px solid black;
+  background-color: black;
+  color: white;
+}
+
+.navbar {
+  background-color: white;
+  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.25);
+}
+
+.home h1 {
+  font-size: 70px;
+}
+
+.home h3 {
+  font-size: 40px;
+}
+
+.propil {
+  width: 90%;
+  border-radius: 10%;
+  box-shadow: 0 0 0 3.5px rgba(0, 0, 0, 0.25);
+  margin-bottom: 30px;
+}
+
+img {
+  width: 20px;
+}
+
+#arrow {
+  animation: 1s upDown infinite;
+}
+
+@keyframes upDown {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(100);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
