--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@ body {
 
 section {
   padding-top: 128px;
+  position: relative;
+}
+
+section::before {
+  z-index: -1;
+  content: "";
+  font-size: 72px;
+  color: gray;
+  opacity: 0.25;
+  position: absolute;
+  font-weight: 600;
+  top: 25px;
+  left: -10px;
 }
 
 .btn.button {
@@ -44,7 +57,25 @@ img {
 }
 
 #arrow {
-  animation: 1s upDown infinite;
+  animation: 1.5s upDown infinite;
+}
+
+.about::before {
+  content: "About";
+}
+
+.about-exp-item {
+  margin-top: 25px;
+}
+
+.about-exp-item-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.about-exp-item-detail {
+  display: none;
 }
 
 @keyframes upDown {
@@ -53,7 +84,7 @@ img {
   }
 
   50% {
-    transform: translateY(100);
+    transform: translateY(5px);
   }
 
   100% {
