--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ section::before {
   border-radius: 24px;
 }
 
-.btn.button:hover {
+.btn.button:hover,
+.btn.button.active {
   border: 3px solid black;
   background-color: black;
   color: white;
@@ -34,7 +35,7 @@ section::before {
 
 .navbar {
   background-color: white;
-  box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
 }
 
 .home h1 {
@@ -48,7 +49,7 @@ section::before {
 .propil {
   width: 90%;
   border-radius: 10%;
-  box-shadow: 0 0 0 3.5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 30px 30px rgba(0, 0, 0, 0.25);
   margin-bottom: 30px;
 }
 
@@ -76,6 +77,85 @@ img {
 
 .about-exp-item-detail {
   display: none;
+}
+
+.work::before {
+  content: "Work";
+}
+
+.work-img {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "work-1 work-2" "work-3 work-3";
+  gap: 16px;
+}
+
+.work-img img {
+  width: 100%;
+}
+
+.work-img-item {
+  position: relative;
+}
+
+.work-img-item:hover::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: aliceblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+#work-1 {
+  grid-area: work-1;
+  box-shadow: 0 9px 9px rgba(0, 0, 0, 0.25);
+}
+
+#work-1:hover::after {
+  content: "Chart";
+}
+
+#work-2 {
+  grid-area: work-2;
+  box-shadow: 0 9px 9px rgba(0, 0, 0, 0.25);
+}
+
+#work-2:hover::after {
+  content: "Chart";
+}
+
+#work-3 {
+  grid-area: work-3;
+  box-shadow: 0 9px 9px rgba(0, 0, 0, 0.25);
+}
+
+#work-3:hover::after {
+  content: "WorkSpace";
+}
+
+.contact {
+  padding-bottom: 128px;
+}
+
+.contact::before {
+  content: "Contact";
+}
+
+.contact-form {
+  border: 1px solid black;
+  padding: 64px 32px;
+}
+
+.form-label {
+  font-weight: 700;
 }
 
 @keyframes upDown {
