--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
-}
+} */
 
 section {
   padding-top: 128px;
@@ -38,6 +38,10 @@ section::before {
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
 }
 
+.home .col-3 img {
+  width: 100%;
+}
+
 .home h1 {
   font-size: 70px;
 }
@@ -48,8 +52,8 @@ section::before {
 
 .propil {
   width: 90%;
-  border-radius: 10%;
-  box-shadow: 0 30px 30px rgba(0, 0, 0, 0.25);
+  border-radius: 50% 10% 50% 10%;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 3);
   margin-bottom: 30px;
 }
 
@@ -116,7 +120,7 @@ img {
 
 #work-1 {
   grid-area: work-1;
-  box-shadow: 0 9px 9px rgba(0, 0, 0, 0.25);
+  box-shadow: 9px 9px 9px rgba(0, 0, 0, 1.5);
 }
 
 #work-1:hover::after {
@@ -125,7 +129,7 @@ img {
 
 #work-2 {
   grid-area: work-2;
-  box-shadow: 0 9px 9px rgba(0, 0, 0, 0.25);
+  box-shadow: 9px 9px 9px rgba(0, 0, 0, 1.5);
 }
 
 #work-2:hover::after {
@@ -134,7 +138,7 @@ img {
 
 #work-3 {
   grid-area: work-3;
-  box-shadow: 0 9px 9px rgba(0, 0, 0, 0.25);
+  box-shadow: 9px 9px 9px rgba(0, 0, 0, 1.5);
 }
 
 #work-3:hover::after {
@@ -150,12 +154,32 @@ img {
 }
 
 .contact-form {
-  border: 1px solid black;
+  /* border: 0.4px solid #212529; */
   padding: 64px 32px;
+  box-shadow: 0 30px 30px rgba(0, 0, 0, 0.5);
+}
+
+.ig {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
 }
 
 .form-label {
   font-weight: 700;
+}
+
+@media only screen and (max-width: 768px) {
+  .home img {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  section::before {
+    left: 25px;
+  }
 }
 
 @keyframes upDown {
