--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
 } */
 
+.logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 45%;
+}
+
 section {
   padding-top: 128px;
   position: relative;
